examples/errors/esin0.c
int main ()
{
	int e1
	
	e1 = 0;
}

